--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -163,13 +163,49 @@ margin-bottom: 15px;
 
 
 #error_explanation {
-color: #f00;
+color: #f00
 ul {
 list-style: none;
 margin: 0 0 18px 0;
 }
 }
 
+/* users index */
+.users {
+list-style: none;
+margin: 0;
+li {
+overflow: auto;
+padding: 10px 0;
+border-top: 1px solid $grayMediumLight;
+&:last-child {
+border-bottom: 1px solid $grayMediumLight;
+}
+}
+}
 
-
-
+/* microposts */
+.microposts {
+list-style: none;
+margin: 10px 0 0 0;
+li {
+padding: 10px 0;
+border-top: 1px solid #e8e8e8;
+}
+}
+.content {
+display: block;
+}
+.timestamp {
+color: $grayMediumLight;
+}
+.gravatar {
+float: left;
+margin-right: 10px;
+}
+aside {
+textarea {
+height: 100px;
+margin-bottom: 5px;
+}
+}
