--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -209,3 +209,34 @@ height: 100px;
 margin-bottom: 5px;
 }
 }
+
+
+/* sidebar */
+
+.stats {
+overflow: auto;
+a {
+float: left;
+padding: 0 10px;
+border-left: 1px solid $grayMediumLight;
+color: gray;
+&:first-child {
+padding-left: 0;
+border: 0;
+}
+&:hover {
+text-decoration: none;
+color: $grayMediumLight;
+}
+}
+strong {
+display: block;
+}
+}
+.user_avatars {
+overflow: auto;
+margin-top: 10px;
+.gravatar {
+margin: 1px 1px;
+}
+}
