--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -9,7 +9,6 @@
 	</span>
 
 		<%= link_to "delete", feed_item, method: :delete,
-																			data: { confirm: "You sure?" },
-																			title: feed_item.content %>
+																			data: { confirm: "You sure?" } %>
 	
 </li>
